--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,47 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+orbs:
+  aws-ecr: circleci/aws-ecr@7.2.0
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+commands:
+  ecr_publish:
+    parameters:
+      tag:
+        type: string
+      accountUrl:
+        type: string
+    steps:
+      - aws-ecr/build-and-push-image:
+          dockerfile: Dockerfile
+          account-url: <<parameters.accountUrl>>
+          aws-access-key-id: AWS_ACCESS_KEY
+          aws-secret-access-key: AWS_SECRET
+          repo: ${MY_APP_PREFIX}
+          tag: <<parameters.tag>>
+
+jobs:
+  PublishProd:
+    executor: aws-ecr/default
+    steps:
+      - ecr_publish:
+          tag: "latest"
+          accountUrl: AWS_ECR_ACCOUNT_URL
+
 workflows:
-  say-hello-workflow:
+  BuildDeploy:
     jobs:
-      - say-hello
+      - Authorization:
+          type: approval
+          filters:
+            branches:
+              only:
+                - main
+                - story/CBLT-37
+      - PublishProd:
+          requires:
+            - Authorization
+          filters:
+            branches:
+              only:
+                - main
+                - story/CBLT-37
