CI (CBLT-37) add Dockerfile path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ commands:
           aws-secret-access-key: AWS_SECRET
           repo: ${MY_APP_PREFIX}
           tag: <<parameters.tag>>
+          path: docker/production.Dockerfile
 
 jobs:
   PublishProd:
