--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
         type: string
     steps:
       - aws-ecr/build-and-push-image:
-          dockerfile: Dockerfile
+          dockerfile: docker/production.Dockerfile
           account-url: <<parameters.accountUrl>>
           aws-access-key-id: AWS_ACCESS_KEY
           aws-secret-access-key: AWS_SECRET
